# trade-alpha

./: .env.example  .gitignore  AGENTS.md  COMMIT_MSG.txt  README.md  diff_output.txt  main.py  pyproject.toml  restart.bat  service.bat  service.ps1
backend/: .gitignore  _add_positions.py  _analyze_scores.py  _analyze_scores2.py  _check_dates.py  _query_unique.py  batch_backtest.py  cleanup_db.py  debug_trades.py  fix_status.py  get_trainings.py  init_sync_status.py  main.py  pyproject.toml  tmp_check_configs.py  tmp_debug_suggestions.py  tmp_list_bt.py  tmp_opt_test.py  tmp_save_reload.py  tmp_update_configs.py
backend/docs/: scripts.md
backend/scripts/: activate_stocks.py  analyze_backtest.py  analyze_backtest_today.py  analyze_backtest_vol.py  analyze_bottom.py  analyze_buy_methods.py  analyze_buy_timing.py  analyze_features.py  analyze_indicators.py  analyze_lstm_vs_momentum.py  analyze_momentum_group.py  analyze_momentum_improvement.py  analyze_momentum_overextend.py  analyze_momentum_selection.py  analyze_phase_strategy.py  analyze_rank_improvement.py  analyze_rank_up_thresholds.py  analyze_recent_backtests.py  analyze_regime.py  analyze_retrace.py  analyze_ri_dist.py  analyze_safety_bt.py  analyze_safety_labels.py  analyze_selection_v2.py  analyze_stop_loss.py  analyze_training.py  backfill_data_count.py  backfill_ma40.py  backfill_weekly_features.py  backtest_multi.py  backtest_portfolio.py  backtest_single.py  calculate_indicators.py  calculate_trend_indicators.py  check_0407.py  check_backtests.py  check_data.py  check_data_count.py  check_model_configs.py  check_prediction_distribution.py  (+26 more)
backend/src/trade_alpha/: __init__.py  config.py  constants.py  logging.py  schemas.py  test_config.py
backend/src/trade_alpha/account/: __init__.py  account_manager.py  service.py
backend/src/trade_alpha/api/: deps.py  error_handlers.py  exceptions.py  main.py  schemas.py  validators.py
backend/src/trade_alpha/backtest/: __init__.py  engine.py  metrics.py  service.py
backend/src/trade_alpha/dao/: __init__.py  (+42 more)
backend/tests/: conftest.py
(+713 files in other folders)
