[project]
name = "trade-alpha"
version = "0.1.0"
description = "Stock prediction system"
requires-python = ">=3.14"
dependencies = [
    "pymongo>=4.0",
    "tushare>=1.4",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
