[project]
name = "trade-alpha"
version = "0.1.0"
description = "Stock prediction system"
requires-python = ">=3.14"
dependencies = [
    "pymongo>=4.0",
    "tushare>=1.4",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26",
    "xgboost>=2.0.0",
    "torch>=2.0.0",
    "apscheduler>=3.10",
    "beanie>=1.25",
    "motor>=3.3",
    "fastapi[standard]>=0.100",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "order: specify test execution order",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
